--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,20 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" [hidden]="scanning">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Scanner
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" [hidden]="scanning">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Scanner</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-button (click)="scan()">Scan</ion-button><br/>
+    <ion-text>{{scanResult}}</ion-text>
   </div>
 </ion-content>
